--- a/Completed-Algorithms/Combinations/ReadMe.me
+++ b/Completed-Algorithms/Combinations/ReadMe.me
@@ -1,5 +1,5 @@
 Rosetta Code: Combinations
-Given non-negative integers m and n, generate all size m combinations of the integers from 0 (zero) to n-1 in sorted order (each combination is sorted and the entire table is sorted).
+Given non-negative integers m and n, generate all size m combinations of the integers from 0 (zero) to n-1 in sorted order (each combination is sorted and the entire table is sorted)
 
 Example:
 
@@ -15,3 +15,4 @@ Example:
 1 2 4
 1 3 4
 2 3 4
+
